Added ConnectionTab. To be implemented

--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -6,7 +6,7 @@ description:
 license : BSD3
 license-file : LICENSE
 author : Michael Oswald
-build-type: Custom
+build-type: Simple
 maintainer: michael.oswald@onikudaki.net
 homepage:
 category: UI,Graphics
@@ -16,12 +16,6 @@ cabal-version: >=2.0
 source-repository head
   type: git
   location: http://github.com/oswald2/AURIS
-
-custom-setup
-  setup-depends:
-      Cabal >=2.2.0.0 && <4
-    , base >=4.4
-    , filepath
 
 Flag FastCompile
    Description: Turn off optimizations for faster compilation
@@ -53,6 +47,7 @@ library
     GUI.Chart
     GUI.GraphWidget
     GUI.ParamDisplay
+    GUI.ConnectionTab
 
 
 
@@ -145,13 +140,4 @@ library
                      -funbox-strict-fields
 
 
-  if impl(ghc >= 7.10) && flag(FastCompile)
-     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
-
-  if os(windows)
-    ghc-Options: -optl-mwindows
-    ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
-  if os(darwin)
-   ghc-Options: "-optl-Wl,-lfltkc"
-  if !os(darwin) && !os(windows)
-   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
+  
