Brought to compile on Ubuntu 20.09

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -52,7 +52,6 @@ library
         Data.PUS.TCTransferFrame
         Data.PUS.TCTransferFrameEncoder
         Data.PUS.TCRequest
-        Data.PUS.TCRequestEncoder
         Data.PUS.TCPacket
         Data.PUS.TCPacketEncoder
         Data.PUS.PUSPacket
@@ -79,6 +78,7 @@ library
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
         Data.PUS.NcduToTMFrame
+        Data.PUS.ProtocolSwitcher
         Protocol.NCTRS
         Protocol.EDEN
         Protocol.EDENProcessor
