Slowly getting EDEN TCs working...

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -81,6 +81,7 @@ library
         Protocol.NCTRS
         Protocol.EDEN
         Protocol.EDENProcessor
+        Protocol.EDENEncoder
         Protocol.CnC
         Protocol.ProtocolInterfaces
         Protocol.ProtocolSwitcher
