Added very basic EDEN command sending

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -65,6 +65,7 @@ Executable AURISi
     esa-mib,
     gui-base,
     auris-tm-displays,
+    auris-tc-displays,
     auris-control-displays,
     mcs-interface,
     optparse-generic,
