Updated to lts-16.22, added SSC counter handling (initial version)

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -78,6 +78,7 @@ library
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
         Data.PUS.NcduToTMFrame
+        Data.PUS.SSCCounter
         Protocol.NCTRS
         Protocol.EDEN
         Protocol.EDENProcessor
