--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -78,7 +78,7 @@ library
         Data.PUS.MissionSpecific.Definitions
         Data.PUS.Value
         Data.PUS.NcduToTMFrame
-        Data.PUS.SSCCounter
+        Data.PUS.Counter
         Protocol.NCTRS
         Protocol.EDEN
         Protocol.EDENProcessor
