--- a/esa-base/esa-base.cabal
+++ b/esa-base/esa-base.cabal
@@ -165,6 +165,8 @@ library
     , mtl
     , hashtables-mo
     , colour
+    , directory
+    , filepath
 
 
   -- Directories containing source files.
