Added C&C commands to be sent

--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -9,6 +9,13 @@
                 "cfgCncHost": "localhost",
                 "cfgCncPortTC": 11000,
                 "cfgCncID": 1
+            },
+            {
+                "cfgCncHasCRC": true,
+                "cfgCncPortTM": 10001,
+                "cfgCncHost": "localhost",
+                "cfgCncPortTC": 11001,
+                "cfgCncID": 2
             }
         ],
         "cfgUnknownSPID": 5071,
