--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -89,6 +89,9 @@ library
         Protocol.ProtocolSwitcher
         Application.Chains
         Application.DataModel
+        Verification.Verification
+        Verification.Commands
+        Verification.Processor
 
 
     hs-source-dirs: src
@@ -184,6 +187,7 @@ library
         , pretty-show
         , filepath
         , directory
+        , fixed-vector
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
