A lot of updates for TC verifications

--- a/EdenRouterEden1Config.json
+++ b/EdenRouterEden1Config.json
@@ -38,6 +38,6 @@
         "cfgTMFrameHasCRC": true
     },
     "aurisLogLevel": {
-        "tag": "LogLevelInfo"
+        "tag": "LogLevelDebug"
     }
 }
