--- a/auris-control-displays/auris-control-displays.cabal
+++ b/auris-control-displays/auris-control-displays.cabal
@@ -144,7 +144,7 @@ library
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -freverse-errors 
     else 
-        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -freverse-errors
 
