--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -143,7 +143,7 @@ Executable AURISi
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields  -threaded -rtsopts
     else
-        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields  -threaded -rtsopts
 
