--- a/esa-mib/esa-mib.cabal
+++ b/esa-mib/esa-mib.cabal
@@ -174,7 +174,7 @@ library
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
     else 
-        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
+        ghc-options: -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields
 
