--- a/mcs-interface/stack.yaml
+++ b/mcs-interface/stack.yaml
@@ -17,7 +17,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2021-01-05
+resolver: lts-16.28
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
