--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: nightly-2021-01-05
+resolver: lts-16.28
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -33,7 +33,7 @@ packages:
 - esa-base
 - esa-mib
 - esa-space-protocols
-- esa-db
+#- esa-db
 - esa-tm-model
 - mcs-interface
 - gui-base
@@ -63,6 +63,18 @@ extra-deps:
 - timers-updatable-0.2.0.2
 - direct-sqlite-2.3.26
 - Chart-cairo-1.9.3@sha256:f484a7194ca08ed67f02aa626e2f8f4d1a9b50624e0d50e3ced62958f7481cca,925
+- haskell-gi-base-0.24.4
+- haskell-gi-0.24.5
+- gi-glib-2.0.24
+- gi-pango-1.0.23
+- gi-harfbuzz-0.0.3
+- gi-gtk-3.0.36
+- gi-gtk-hs-0.3.9
+- gi-atk-2.0.21
+- gi-cairo-render-0.1.0
+- gi-cairo-connector-0.1.0
+- gi-gobject-2.0.24
+
 
 # Override default flag values for local packages and extra-deps
 # flags:
