--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -21,6 +21,7 @@
         "cfgUnknownSPID": 5071,
         "cfgEpoch": "UnixTime",
         "cfgInterfacePort": 55555,
+        "cfgRandomizerEnabled": false,
         "cfgRandomizerStartValue": 255,
         "cfgVCIDs": [
             {
