--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -81,6 +81,7 @@ library
         Data.PUS.NcduToTMFrame
         Data.PUS.Counter
         Protocol.NCTRS
+        Protocol.NCTRSProcessor
         Protocol.EDEN
         Protocol.EDENProcessor
         Protocol.EDENEncoder
