--- a/s2k_config.json
+++ b/s2k_config.json
@@ -14,6 +14,7 @@
         "cfgUnknownSPID": 5071,
         "cfgEpoch": "UnixTime",
         "cfgInterfacePort": 55555,
+        "cfgRandomizerEnabled": false,
         "cfgRandomizerStartValue": 255,
         "cfgVCIDs": [
             {
