--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -258,7 +258,8 @@ test-suite CLTUTest
         attoparsec -any,
         text -any,
         mtl -any,
-        vector -any
+        vector -any,
+        rio -any
 
 
 
@@ -445,45 +446,62 @@ test-suite TMExtractionTest
         lens -any
 
 
-executable TMSimulatorTest
-    main-is: TMSimulatorTest.hs
+-- executable TMSimulatorTest
+--     main-is: TMSimulatorTest.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src/test
+--     if flag(llvm)
+--         ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+--     else
+--         ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+--     build-depends:
+--         esa-space-protocols
+--         , esa-base
+--         , base
+--         , bytestring
+--         , conduit
+--         , conduit-extra
+--         , rio
+--         , text
+--         , unliftio
+
+
+-- executable TMModelTest
+--     main-is: TMModelTest.hs
+--     default-language: Haskell2010
+--     hs-source-dirs: src/test
+--     if flag(llvm)
+--         ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+--     else
+--         ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+--     build-depends:
+--         esa-space-protocols
+--         , esa-base
+--         , esa-mib
+--         , base
+--         , bytestring
+--         , conduit
+--         , conduit-extra
+--         , rio
+--         , text
+--         , unliftio
+--         , mwc-random
+--         , text-short
+--         , hashtables-mo
+
+
+test-suite VerificationTest
+    type: exitcode-stdio-1.0
+    main-is: VerificationTest.hs
     default-language: Haskell2010
     hs-source-dirs: src/test
     if flag(llvm)
-        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+        ghc-options: -Wall -O0 -threaded -rtsopts -fllvm -eventlog
     else
-        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+        ghc-options: -Wall -O0 -threaded -rtsopts -eventlog
     build-depends:
         esa-space-protocols
         , esa-base
         , base
-        , bytestring
-        , conduit
-        , conduit-extra
+        , hspec
         , rio
-        , text
-        , unliftio
-
-
-executable TMModelTest
-    main-is: TMModelTest.hs
-    default-language: Haskell2010
-    hs-source-dirs: src/test
-    if flag(llvm)
-        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
-    else
-        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
-    build-depends:
-        esa-space-protocols
-        , esa-base
-        , esa-mib
-        , base
-        , bytestring
-        , conduit
-        , conduit-extra
-        , rio
-        , text
-        , unliftio
-        , mwc-random
-        , text-short
-        , hashtables-mo
