Added definitions for TC Echo

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -138,6 +138,7 @@ library
         TypeSynonymInstances
         TypeApplications
         ViewPatterns
+        NumericUnderscores
 
     build-depends:
         base
