--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -189,7 +189,7 @@ library
         , pretty-show
         , filepath
         , directory
-        , timers-updatable
+        , timer-wheel
 
     if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
