--- a/esa-space-protocols/stack.yaml
+++ b/esa-space-protocols/stack.yaml
@@ -41,6 +41,8 @@ packages:
 - ../esa-base
 - ../esa-mib
 - ../esa-db
+- ../hashtables-mo
+- ../timer-wheel
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -50,7 +52,9 @@ extra-deps:
 - attoparsec-time-1
 - bytestring-to-vector-0.3.0.1
 - hw-prim-bits-0.1.0.4
-
+- selda-sqlite-0.1.7.1@sha256:d750cb189dfd5049628cd1dd0a5d7abda95bdac4a451e0973fc9fde80e70ed17,1257
+- timers-updatable-0.2.0.2@sha256:8dc262bb1324c02eae4251f2b0f78109d1a6133754d5ae845778908abda43858,946
+- direct-sqlite-2.3.26@sha256:04e835402f1508abca383182023e4e2b9b86297b8533afbd4e57d1a5652e0c23,3718
 
 # Override default flag values for local packages and extra-deps
 # flags:
