--- a/stack.yaml
+++ b/stack.yaml
@@ -75,7 +75,8 @@ extra-deps:
 - gi-cairo-render-0.1.0
 - gi-cairo-connector-0.1.0
 - gi-gobject-2.0.24
-
+- refined-0.6.1@sha256:d5d713f0a2ad79d1c049d2d132fd8c2078b883b5ea3db876087eaec102843e57,2748
+- these-skinny-0.7.4@sha256:e29336a1a70a497e09d8266f8438efb30a807bafaa6b00f5a136f7493efb3160,1239
 
 # Override default flag values for local packages and extra-deps
 # flags:
