--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -17,19 +17,13 @@
         "cfgInterfacePort": 55555,
         "cfgRandomizerStartValue": 255,
         "cfgVCIDs": [
-            {
-                "getVCID": 0
-            },
-            {
-                "getVCID": 1
-            }
+            0,
+            1
         ],
         "cfgLeapSeconds": {
             "fromLeaps": 17
         },
-        "cfgSCID": {
-            "getSCID": 0
-        },
+        "cfgSCID": 0,
         "cfgNCTRS": [
             {
                 "cfgNctrsPortTC": 20009,
