--- a/esa-db/esa-db.cabal
+++ b/esa-db/esa-db.cabal
@@ -39,8 +39,14 @@ flag optimize
 
 library
   exposed-modules:
+      Data.DbConfig 
+      Data.DbConfig.Postgres
+      Data.DbConfig.SQLite
       Persistence.Logging
       Persistence.TMFrame
+      Persistence.Postgres 
+      Persistence.DbInterface
+      Persistence.Definitions
   other-modules:
       Persistence.Internals
       Paths_esa_db
@@ -50,12 +56,63 @@ library
       base >=4.7 && <5
     , conduit
     , rio
+    , bytestring
     , selda
     , selda-sqlite
     , stm
     , time
-  default-language: Haskell2010
+    , persistent 
+    , persistent-template
+    , persistent-postgresql
+    , persistent-sqlite
+    , bytestring-strict-builder
+    , resource-pool
+    , aeson
+    , monad-logger
+    , esa-base 
 
+
+  default-language: Haskell2010
+  default-extensions:
+      BangPatterns
+      BinaryLiterals
+      ConstraintKinds
+      DataKinds
+      DefaultSignatures
+      DeriveDataTypeable
+      DeriveFoldable
+      DeriveFunctor
+      DeriveGeneric
+      DeriveTraversable
+      DoAndIfThenElse
+      EmptyDataDecls
+      ExistentialQuantification
+      FlexibleContexts
+      FlexibleInstances
+      FunctionalDependencies
+      GADTs
+      DeriveAnyClass
+      InstanceSigs
+      KindSignatures
+      LambdaCase
+      MultiParamTypeClasses
+      MultiWayIf
+      NamedFieldPuns
+      NoImplicitPrelude
+      OverloadedStrings
+      PartialTypeSignatures
+      PatternGuards
+      PolyKinds
+      RankNTypes
+      RecordWildCards
+      ScopedTypeVariables
+      StandaloneDeriving
+      TupleSections
+      TypeFamilies
+      TypeSynonymInstances
+      TypeApplications
+      ViewPatterns
+      NumericUnderscores
   if flag(llvm)
         ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
