--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -93,12 +93,13 @@ library
         Verification.Verification
         Verification.Commands
         Verification.Processor
+        Persistence.Conversion.Types
+        Persistence.Conversion.TMFrame
 
 
     hs-source-dirs: src
     default-language: Haskell2010
     default-extensions:
-        
         BangPatterns
         BinaryLiterals
         ConstraintKinds
@@ -120,7 +121,6 @@ library
         InstanceSigs
         KindSignatures
         LambdaCase
-        
         MultiParamTypeClasses
         MultiWayIf
         NamedFieldPuns
