--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -494,3 +494,25 @@ test-suite VerificationTest
         , base
         , hspec
         , rio
+
+
+executable RetrievalTest
+    main-is: RetrievalTest.hs
+    default-language: Haskell2010
+    hs-source-dirs: src/test
+    if flag(llvm)
+        ghc-options: -Wall -O2 -threaded -rtsopts -fllvm -eventlog
+    else
+        ghc-options: -Wall -O2 -threaded -rtsopts -eventlog
+    build-depends:
+        esa-space-protocols
+        , esa-base
+        , esa-db
+        , base
+        , bytestring
+        , conduit
+        , conduit-extra
+        , rio
+        , text
+        , unliftio
+        , refined 
