--- a/s2k_config.json
+++ b/s2k_config.json
@@ -34,6 +34,7 @@
         "cfgSCID": 0,
         "cfgDataBase": {
             "cfgStoreTMFrames": true,
+            "cfgDbDebugLog": true,
             "cfgBackend": {
                 "tag": "PGConfig",
                 "contents": {
