--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -38,6 +38,7 @@
         "cfgSCID": 0,
         "cfgDataBase": {
             "cfgStoreTMFrames": true,
+            "cfgDbDebugLog": true,
             "cfgBackend": {
                 "tag": "PGConfig",
                 "contents": {
