--- a/auris-tm-displays/auris-tm-displays.cabal
+++ b/auris-tm-displays/auris-tm-displays.cabal
@@ -44,6 +44,7 @@ library
     GUI.TMPacketTab
     GUI.TMFrameTab
     GUI.TMParamTab
+    GUI.TMParamDetails
     GUI.Chart
     GUI.GraphWidget
     GUI.ParamDisplay
