Some updates to config and build files

--- a/EdenRouterCnc1Config.json
+++ b/EdenRouterCnc1Config.json
@@ -42,6 +42,13 @@
         "cfgSCID": 0,
         "cfgNCTRS": [
         ],
+        "cfgDataBase": {
+            "cfgStoreTMFrames": true,
+            "cfgDbDebugLog": true,
+            "cfgBackend": {
+                "tag": "NoDB"
+            }
+        },
         "cfgMaxTMFrameLen": 1115,
         "cfgCltuBlockSize": "CltuBS_8",
         "cfgEDEN": [
