Big refactoring of db libraries

--- a/aurisi/aurisi.cabal
+++ b/aurisi/aurisi.cabal
@@ -63,7 +63,7 @@ Executable AURISi
     lens,
     containers,
     esa-base,
-    esa-db,
+    esa-db-mongodb,
     esa-space-protocols,
     esa-mib,
     gui-base,
