Upgraded to LTS-17.3

--- a/esa-space-protocols/esa-space-protocols.cabal
+++ b/esa-space-protocols/esa-space-protocols.cabal
@@ -167,7 +167,7 @@ library
         , sorted-list
         , deepseq
         , esa-base
-        , esa-db
+--        , esa-db
         , network
         , streaming-commons
         , text-short
